# resumee

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  resumee.yaml
src/: CMakeLists.txt  main.cc  resumee.cc  resumee.hpp  template_base.hpp  template_registry.cpp  template_registry.hpp  template_wrapper.hpp  utils.hpp  web_test.tmpl  yaml_serialization.hpp
